Fix deploy for java